--- a/index.html
+++ b/index.html
@@ -22,22 +22,83 @@
 <body>
   <div class="container d-flex justify-content-center">
     <div class="w-100" style="max-width: 600px;">
+
+      <!-- Card -->
       <div class="card shadow-sm mb-4">
         <div class="card-body p-4">
+
           <h1 class="card-title text-center mb-4">Custom Label Generator</h1>
 
-          <!-- Instructions Button (unchanged) -->
-          <button type="button" class="btn btn-secondary mb-4 w-100" data-bs-toggle="modal" data-bs-target="#instructionsModal">
+          <!-- Instructions Button -->
+          <button type="button" class="btn btn-secondary mb-4 w-100"
+                  data-bs-toggle="modal" data-bs-target="#instructionsModal">
             Instructions
           </button>
-          <!-- ... your instructions modal here ... -->
 
-          <!-- Paper size controls (updated order) -->
+          <!-- Instructions Modal -->
+          <div class="modal fade" id="instructionsModal" tabindex="-1"
+               aria-labelledby="instructionsModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="instructionsModalLabel">ব্যবহার নির্দেশনা</h5>
+                  <button type="button" class="btn-close"
+                          data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <ol class="ps-3">
+                    <li class="mb-3">
+                      <strong>PDF সাইজ:</strong>
+                      <ul class="ps-3 mb-0">
+                        <li>ডিফল্ট: <code class="text-primary">152.4 mm × 101.6 mm</code> (6″ × 4″)</li>
+                      </ul>
+                    </li>
+                    <li class="mb-3">
+                      <strong>ইমেজ সাইজ:</strong>
+                      <ul class="ps-3 mb-0">
+                        <li>হেডার: ≥900×300px (JPEG/PNG)</li>
+                        <li>ফুটার: ≥900×450px (JPEG/PNG)</li>
+                        <li class="text-warning"><strong>মহত্বপূর্ণ:</strong> হেডার ও ফুটার স্বয়ংক্রিয়ভাবে লেবেলের
+                          প্রস্থ অনুযায়ী প্রসারিত হবে।</li>
+                      </ul>
+                    </li>
+                    <li class="mb-3">
+                      <strong>এক্সেল:</strong>
+                      <ul class="ps-3 mb-0">
+                        <li>এক্সটেনশন: <code>.xls</code>, <code>.xlsx</code> &mdash;
+                          <a href="EXCEL_TEMPLATE_URL" target="_blank">ডাউনলোড টেমপ্লেট</a>
+                        </li>
+                        <li>কলাম: <code>Invoice</code>, <code>First Name</code>, <code>Last Name</code>,
+                          <code>Phone</code>, <code>Address</code>, <code>Order Total Amount</code></li>
+                      </ul>
+                    </li>
+                    <li class="mb-3">
+                      <strong>ইনভয়েস সিলেকশন:</strong>
+                      <ul class="ps-3 mb-0">
+                        <li>Ctrl (Win) / Cmd (Mac) দিয়ে একাধিক নির্বাচন</li>
+                      </ul>
+                    </li>
+                    <li class="mb-3">
+                      <strong>ডাউনলোড:</strong> <code>shipping_labels.zip</code>
+                    </li>
+                  </ol>
+                  <p class="text-info">
+                    <strong>ভিডিও নির্দেশিকা:</strong>
+                    <a href="YOUTUBE_URL" target="_blank">টিউটোরিয়াল দেখুন</a>
+                  </p>
+                  <p class="text-info">
+                    পরামর্শ: প্রয়োজনমতো Custom সাইজ নির্বাচন করুন।
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Paper size controls -->
           <div class="mb-3 row">
             <label for="presetSize" class="col-sm-4 col-form-label">Paper Size</label>
             <div class="col-sm-8">
               <select id="presetSize" class="form-select">
-                <!-- Swap values so label 4×6 uses 4in width × 6in height -->
                 <option value="101.6,152.4,mm">4×6 in (101.6×152.4 mm)</option>
                 <option value="152.4,101.6,mm">6×4 in (152.4×101.6 mm)</option>
                 <option value="210,297,mm">A4 (210×297 mm)</option>
@@ -67,24 +128,21 @@
 
           <!-- Form Inputs -->
           <form id="labelForm">
-            <!-- Font upload -->
             <div class="mb-2">
               <label for="fontInput" class="form-label">Upload Font (TTF/OTF)</label>
               <input type="file" id="fontInput" class="form-control" accept=".ttf,.otf">
             </div>
-
-            <!-- existing inputs -->
             <div class="mb-2">
               <label for="headerInput" class="form-label">Header Image</label>
-              <input type="file" class="form-control" id="headerInput" accept="image/*">
+              <input type="file" id="headerInput" class="form-control" accept="image/*">
             </div>
             <div class="mb-2">
               <label for="footerInput" class="form-label">Footer Image</label>
-              <input type="file" class="form-control" id="footerInput" accept="image/*">
+              <input type="file" id="footerInput" class="form-control" accept="image/*">
             </div>
             <div class="mb-2">
               <label for="excelInput" class="form-label">Excel File</label>
-              <input type="file" class="form-control" id="excelInput" accept=".xls,.xlsx">
+              <input type="file" id="excelInput" class="form-control" accept=".xls,.xlsx">
             </div>
             <div id="invoiceSelection" class="mb-2 hidden">
               <label for="invoiceSelect" class="form-label">Select Invoices (optional)</label>
@@ -96,76 +154,237 @@
           <div id="alertPlaceholder" class="mt-3"></div>
         </div>
       </div>
+
+      <!-- Buy me a coffee Accordion -->
+      <div class="accordion mb-4" id="coffeeAccordion">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="coffeeHeading">
+            <button class="accordion-button collapsed" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#coffeeCollapse"
+                    aria-expanded="false" aria-controls="coffeeCollapse">
+              Buy me a coffee
+            </button>
+          </h2>
+          <div id="coffeeCollapse" class="accordion-collapse collapse"
+               aria-labelledby="coffeeHeading" data-bs-parent="#coffeeAccordion">
+            <div class="accordion-body text-center">
+              <p>If you enjoy this tool, consider buying me a coffee ☕️</p>
+              <img src="https://cdn.jsdelivr.net/gh/nasimulhasan/label2@master/qr.jpeg"
+                   alt="Buy me a coffee"
+                   class="img-fluid rounded" />
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
   <!-- Bootstrap Bundle JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
   <script>
     const { jsPDF } = window.jspdf;
     let parsedRows = [], invoiceList = [];
     let customFontName = null, customFontData = null;
 
+    // Helpers
     function readFileAsDataURL(file) {
       return new Promise(res => {
-        const rd = new FileReader(); rd.onload = ()=>res(rd.result); rd.readAsDataURL(file);
+        const rd = new FileReader(); rd.onload = ()=>res(rd.result);
+        rd.readAsDataURL(file);
       });
     }
     function readFileAsArrayBuffer(file) {
       return new Promise(res => {
-        const rd = new FileReader(); rd.onload = ()=>res(rd.result); rd.readAsArrayBuffer(file);
+        const rd = new FileReader(); rd.onload = ()=>res(rd.result);
+        rd.readAsArrayBuffer(file);
       });
     }
     function titleCase(s) {
-      return s.toLowerCase().split(' ').map(w=>w.charAt(0).toUpperCase()+w.slice(1)).join(' ');
+      return s.toLowerCase().split(' ')
+        .map(w=>w.charAt(0).toUpperCase()+w.slice(1))
+        .join(' ');
     }
 
-    document.getElementById('presetSize').addEventListener('change', e=>{
-      document.getElementById('customSizeFields').classList.toggle('d-none', e.target.value!=='custom');
+    // Toggle custom size fields
+    document.getElementById('presetSize').addEventListener('change', e => {
+      document.getElementById('customSizeFields')
+        .classList.toggle('d-none', e.target.value !== 'custom');
     });
+
     const alertPlaceholder = document.getElementById('alertPlaceholder');
-    function showAlert(msg, type='danger'){ const div=document.createElement('div'); div.innerHTML=`<div class="alert alert-${type} alert-dismissible" role="alert">${msg}<button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>`; alertPlaceholder.append(div);}    
+    function showAlert(msg, type='danger') {
+      const div = document.createElement('div');
+      div.innerHTML = `
+        <div class="alert alert-${type} alert-dismissible" role="alert">
+          ${msg}
+          <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        </div>`;
+      alertPlaceholder.append(div);
+    }
 
-    document.getElementById('fontInput').addEventListener('change', async e=>{
-      const file=e.target.files[0]; if(!file)return;
-      const dataUrl=await readFileAsDataURL(file);
-      customFontName=file.name; customFontData=dataUrl.split(',')[1];
+    // Font upload
+    document.getElementById('fontInput').addEventListener('change', async e => {
+      const file = e.target.files[0];
+      if (!file) return;
+      const dataUrl = await readFileAsDataURL(file);
+      customFontName = file.name;
+      customFontData = dataUrl.split(',')[1];
     });
 
-    document.getElementById('excelInput').addEventListener('change', async e=>{
-      const file=e.target.files[0]; if(!file)return; try{
-        const buff=await readFileAsArrayBuffer(file), wb=XLSX.read(buff,{type:'array'});
-        let last={}; parsedRows=XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]],{defval:''}).map(r=>{['Invoice','First Name','Last Name','Phone','Address','Order Total Amount'].forEach(k=>r[k]=r[k]||last[k]||''); last={...r};return r;});
-        invoiceList=[...new Set(parsedRows.map(r=>String(r['Invoice']).trim()))].sort(); const sel=document.getElementById('invoiceSelect'); sel.innerHTML=''; invoiceList.forEach(i=>sel.append(new Option(i,i))); document.getElementById('invoiceSelection').classList.remove('hidden');
-      }catch(err){showAlert('Error parsing Excel: '+err.message);}
+    // Parse Excel
+    document.getElementById('excelInput').addEventListener('change', async e => {
+      const file = e.target.files[0];
+      if (!file) return;
+      try {
+        const buff = await readFileAsArrayBuffer(file);
+        const wb   = XLSX.read(buff, { type: 'array' });
+        let last = {};
+        parsedRows = XLSX.utils.sheet_to_json(
+          wb.Sheets[wb.SheetNames[0]],
+          { defval: '' }
+        ).map(r => {
+          ['Invoice','First Name','Last Name','Phone','Address','Order Total Amount']
+            .forEach(k => r[k] = r[k] || last[k] || '');
+          last = { ...r };
+          return r;
+        });
+        invoiceList = [...new Set(
+          parsedRows.map(r => String(r['Invoice']).trim())
+        )].sort();
+
+        const sel = document.getElementById('invoiceSelect');
+        sel.innerHTML = '';
+        invoiceList.forEach(i => sel.append(new Option(i, i)));
+        document.getElementById('invoiceSelection').classList.remove('hidden');
+      } catch(err) {
+        showAlert('Error parsing Excel: ' + err.message);
+      }
     });
 
-    document.getElementById('generateBtn').addEventListener('click', async ()=>{
-      alertPlaceholder.innerHTML=''; const headerFile=document.getElementById('headerInput').files[0], footerFile=document.getElementById('footerInput').files[0];
-      if(!headerFile||!footerFile) return showAlert('Select both header and footer.');
-      if(!parsedRows.length) return showAlert('Upload and parse Excel first.');
+    // Generate Labels
+    document.getElementById('generateBtn').addEventListener('click', async () => {
+      alertPlaceholder.innerHTML = '';
+      const headerUrl = await readFileAsDataURL(
+        document.getElementById('headerInput').files[0]
+      );
+      const footerUrl = await readFileAsDataURL(
+        document.getElementById('footerInput').files[0]
+      );
+      if (!headerUrl || !footerUrl)
+        return showAlert('Select both header and footer.');
+      if (!parsedRows.length)
+        return showAlert('Upload and parse Excel first.');
 
-      let unit,w,h; const preset=document.getElementById('presetSize').value;
-      if(preset==='custom'){ w=+document.getElementById('paperWidth').value; h=+document.getElementById('paperHeight').value; unit=document.getElementById('paperUnit').value; if(unit==='in'){w*=25.4;h*=25.4;unit='mm';} if(unit==='pt'){w*=0.352778;h*=0.352778;unit='mm';} } else {[w,h,unit]=preset.split(',');w=+w;h=+h;}
+      // Paper size
+      let w, h, unit;
+      const preset = document.getElementById('presetSize').value;
+      if (preset === 'custom') {
+        w = +document.getElementById('paperWidth').value;
+        h = +document.getElementById('paperHeight').value;
+        unit = document.getElementById('paperUnit').value;
+        if (unit === 'in') { w *= 25.4; h *= 25.4; unit = 'mm'; }
+        if (unit === 'pt') { w *= 0.352778; h *= 0.352778; unit = 'mm'; }
+      } else {
+        [w, h, unit] = preset.split(',');
+        w = +w; h = +h;
+      }
 
-      const headerUrl=await readFileAsDataURL(headerFile), footerUrl=await readFileAsDataURL(footerFile), zip=new JSZip();
-      const opts=Array.from(document.getElementById('invoiceSelect').selectedOptions).map(o=>o.value);
-      const targets=opts.length?opts:invoiceList;
+      const zip = new JSZip();
+      const opts = Array.from(
+        document.getElementById('invoiceSelect').selectedOptions
+      ).map(o => o.value);
+      const targets = opts.length ? opts : invoiceList;
 
-      for(const inv of targets){
-        const group=parsedRows.filter(r=>String(r['Invoice']).trim()===inv); if(!group.length) continue;
-        const doc=new jsPDF({unit,format:[w,h]}); doc.setFontSize(10);
-        if(customFontName&&customFontData){doc.addFileToVFS(customFontName,customFontData);doc.addFont(customFontName,'CustomFont','normal');doc.setFont('CustomFont','normal');}
-        const hp=doc.getImageProperties(headerUrl), hh=w*(hp.height/hp.width); doc.addImage(headerUrl,'PNG',0,0,w,hh);
-        const fp=doc.getImageProperties(footerUrl), fh=w*(fp.height/fp.width); doc.addImage(footerUrl,'PNG',0,h-fh,w,fh);
-        let y=hh+11,left=10; doc.text(`Invoice #: ${inv}`,left,y);y+=7; const name=titleCase(group[0]['First Name']+' '+group[0]['Last Name']); doc.text(`Name: ${name}`,left,y);y+=7;
-        let num=String(group[0]['Phone']).replace(/\D/g,''); if(num.startsWith('880'))num=num.slice(3);else if(num.startsWith('0'))num=num.slice(1); if(num.length>10)num=num.slice(-10); doc.text(`Phone: 0${num}`,left,y);y+=7;
-        const addrLines=doc.splitTextToSize(`Address: ${titleCase(group[0]['Address'])}`,w-left*2); doc.text(addrLines,left,y);y+=addrLines.length*7;
-        const notes=group.map(r=>r['NOTE']||'').join(' ').toLowerCase(); const total=notes.includes('paid')?'0':String(Math.round(group[0]['Order Total Amount'])); doc.text(`Total: Tk ${total}`,left,y);y+=7;
-        doc.text('Items:',left,y);y+=7; group.forEach(r=>{const item=r['Items']?titleCase(r['Items']):'';const qty=r['Quantity']?` (${r['Quantity']})`:'';if(item){doc.text(`- ${item}${qty}`,left,y);y+=7;}});
-        zip.file(`${inv}.pdf`,doc.output('blob'));}
-      const blob=await zip.generateAsync({type:'blob'}); saveAs(blob,'shipping_labels.zip');
+      for (const inv of targets) {
+        const group = parsedRows.filter(
+          r => String(r['Invoice']).trim() === inv
+        );
+        if (!group.length) continue;
+
+        const doc = new jsPDF({ unit, format: [w, h] });
+        doc.setFontSize(10);
+
+        // Custom font
+        if (customFontName && customFontData) {
+          doc.addFileToVFS(customFontName, customFontData);
+          doc.addFont(customFontName, 'CustomFont', 'normal');
+          doc.setFont('CustomFont', 'normal');
+        }
+
+        // Header image
+        const hp = doc.getImageProperties(headerUrl);
+        const hh = w * (hp.height / hp.width);
+        doc.addImage(headerUrl, 'PNG', 0, 0, w, hh);
+
+        // Footer image
+        const fp = doc.getImageProperties(footerUrl);
+        const fh = w * (fp.height / fp.width);
+        doc.addImage(footerUrl, 'PNG', 0, h - fh, w, fh);
+
+        // Two‑column text
+        let y = hh + 11;
+        const labelX = 10;
+        const valueX = labelX + 22;
+
+        // Invoice #
+        doc.text('Invoice #:', labelX, y);
+        doc.text(inv,           valueX, y);
+        y += 7;
+
+        // Name
+        const name = titleCase(
+          group[0]['First Name'] + ' ' + group[0]['Last Name']
+        );
+        doc.text('Name:',     labelX, y);
+        doc.text(name,        valueX, y);
+        y += 7;
+
+        // Phone
+        let num = String(group[0]['Phone']).replace(/\D/g, '');
+        if (num.startsWith('880')) num = num.slice(3);
+        else if (num.startsWith('0')) num = num.slice(1);
+        if (num.length > 10) num = num.slice(-10);
+        doc.text('Phone:',    labelX, y);
+        doc.text(num,         valueX, y);
+        y += 7;
+
+        // Address
+        const addrLines = doc.splitTextToSize(
+          titleCase(group[0]['Address']),
+          w - valueX - 10
+        );
+        doc.text('Address:',   labelX, y);
+        doc.text(addrLines,    valueX, y);
+        y += addrLines.length * 7;
+
+        // Total
+        const notes = group.map(r => r['NOTE'] || '').join(' ').toLowerCase();
+        const total = notes.includes('paid')
+          ? '0'
+          : String(Math.round(group[0]['Order Total Amount']));
+        doc.text('Total:',    labelX, y);
+        doc.text(`Tk ${total}`, valueX, y);
+        y += 7;
+
+        // Items
+        doc.text('Items:',    labelX, y);
+        y += 7;
+        group.forEach(r => {
+          const item = r['Items'] ? titleCase(r['Items']) : '';
+          const qty  = r['Quantity'] ? ` (${r['Quantity']})` : '';
+          if (item) {
+            doc.text(`- ${item}${qty}`, labelX + 10, y);
+            y += 7;
+          }
+        });
+
+        // Add PDF to ZIP
+        zip.file(`${inv}.pdf`, doc.output('blob'));
+      }
+
+      const blob = await zip.generateAsync({ type: 'blob' });
+      saveAs(blob, 'shipping_labels.zip');
     });
   </script>
 </body>
